Introduce 2 step download. DAT-413
