# app/openapi_server/openapi/openapi.yaml
@@ -37,6 +37,7 @@ paths:
         '404':
           description: Download Failed
       x-openapi-router-controller: openapi_server.controllers.surveys_controller
+  
   /surveys/{survey_id}/registrations/{registration_id}/images/archives:
     get:
       summary: Download a single of registrations image folder as a zip archive
@@ -58,6 +59,7 @@ paths:
           description: Download Failed
           
       x-openapi-router-controller: openapi_server.controllers.surveys_controller
+  
   /surveys/{survey_id}/registrations/csvfiles:
     get:
       summary: Retrieve a csv file
@@ -79,6 +81,7 @@ paths:
         '403':
           description: Access token does not have the required scope
       x-openapi-router-controller: openapi_server.controllers.surveys_controller
+  
   /surveys/{survey_id}/registrations/archives:
     get:
       summary: Retrieve a zip file
@@ -100,6 +103,7 @@ paths:
         '403':
           description: Access token does not have the required scope
       x-openapi-router-controller: openapi_server.controllers.surveys_controller
+  
   /surveys/{survey_id}/registrations:
     get:
       summary: Get a list of available registrations
@@ -122,6 +126,7 @@ paths:
           description: List Not Accessed
           
       x-openapi-router-controller: openapi_server.controllers.surveys_controller
+
   /surveys:
     get:
       description: Get all forms available
@@ -140,6 +145,22 @@ paths:
         '404':
           description: List Not Accessed
       x-openapi-router-controller: openapi_server.controllers.surveys_controller
+
+  /surveys/{nonce}:
+    get:
+      description: Download previously requested information
+      operationId: get_surveys_nonce
+      responses:
+        '200':
+          description: download started
+          content:
+            application/zip:
+              schema:
+                $ref: '#/components/schemas/zipFile'
+            text/csv:
+              schema:
+                $ref: '#/components/schemas/csvFile'
+
 components:
   schemas:
     zipFile:
@@ -150,6 +171,7 @@ components:
       example: |-
         Name,Age,Location
         John Doe,103,Venus
+
   parameters:
     storagePrefix:
       name: survey_id
@@ -174,6 +196,16 @@ components:
       required: true
       schema:
         type: integer
+
+    nonce:
+      name: nonce
+      in: path
+      description: Unique download identifier
+      required: true
+      schema:
+        type: string
+        format: uuid
+
   securitySchemes:
     Surveys:
       type: oauth2
@@ -186,5 +218,6 @@ components:
             https://login.microsoftonline.com/be36ab0a-ee39-47de-9356-a8a501a9c832/oauth2/v2.0/token
           scopes:
             surveys.read: Grant Download Access
+            
       x-tokenInfoFunc: openapi_server.controllers.security_controller_.info_from_OAuth2AzureAD
       x-scopeValidateFunc: connexion.decorators.security.validate_scope
